--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<html>
+  <head>
+    <title>Replay</title>
+    
+</head>
+  <body>
+    <canvas id="scratch-stage" tabindex="1"></canvas>
+    <div>
+        <button id="button-run">run</button>
+        <button id="button-stop">stop</button>
+        <button id="reset-stop">reset</button>
+        <button id="record-rerun">record-rerun</button>
+    </div>
+    <script src="./main.js"></script>
+  </body>
+</html>
